syntax = "proto3";
option go_package = "grpc/service";

message RequestElection {
    int32 clientName = 1;
}

message Answer {
    int32 MAX = 1;
}

message RequestCS {
    int32 clientName = 1;
    string message = 2;
}

message ResponseCS {
    int32 clientName = 1;
    string message = 2;
}

message IAmCoordinator {
    int32 clientName = 1;
    int32 sender = 2;
}

message SendsAllegiance {
    int32 clientName = 1;
}

message JoinRequest {
    int32 port = 1;
  }
  
  message JoinResponse {
    bool success = 1;
  }

service ITUDatabase {
    rpc NotifyJoin (JoinRequest) returns (JoinResponse) {}

    rpc Election(RequestElection) returns(Answer) {};

    rpc Broadcast(RequestCS) returns(ResponseCS) {};

    rpc Coordinator(IAmCoordinator) returns(SendsAllegiance) {};
}