syntax = "proto3";
option go_package = "grpc/proto";

message ClientMessage {
    int32 lamport_time = 1;
    string clientName = 2;
    string message = 3;
}

message ServerMessage {
    int32 lamport_time = 1;
    string clientName = 2;
    string message = 3;
}

service ITUDatabase {
    rpc Join(ClientMessage) returns(stream ServerMessage) {};

    rpc Broadcast(ClientMessage) returns(stream ServerMessage) {};

    rpc ClientLeaving(ClientMessage) returns(stream ServerMessage) {};
}